[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "zmod"
version = "0.2.1"
authors = [
  { name="João Alberto de Moraes Barretos", email="joao.alb@usp.br" },
]
description = "A package desgined to perform operations over data produced by the GRASP."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
"Homepage" = "https://github.com/zxcorr/zmod"

